force-app/main/default/objects/Degree__c/Degree__c.object-meta.xml
<CustomObject>
    <label>Degree</label>
    <nameField>
        <label>Degree Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Degrees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>