force-app/main/default/objects/Degree__c/fields/Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Annual_Cost__c</fullName>
    <formula>Total_Cost__c / Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>