force-app/main/default/objects/Degree__c/fields/Course_Interested__c.field-meta.xml
<CustomField>
    <fullName>Course_Interested__c</fullName>
    <label>Course Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Web Developement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>