force-app/main/default/objects/Degree__c/fields/Double_Duration__c.field-meta.xml
<CustomField>
    <fullName>Double_Duration__c</fullName>
    <formula>Duration__c * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Double Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>