force-app/main/default/objects/Degree__c/fields/Meal_Type__c.field-meta.xml
<CustomField>
    <fullName>Meal_Type__c</fullName>
    <label>Meal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veg</fullName>
            </value>
            <value>
                <fullName>NonVeg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>