force-app/main/default/objects/Degree__c/fields/Multi_Line_Input__c.field-meta.xml
<CustomField>
    <fullName>Multi_Line_Input__c</fullName>
    <label>Multi Line Input</label>
    <type>TextArea</type>
</CustomField>